--- a/exercicios/ex0022/fundo006.html
+++ b/exercicios/ex0022/fundo006.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
             background-size: cover;
         }
         main {
@@ -26,6 +23,11 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur voluptatem voluptates! Voluptatem, incidunt! Necessitatibus ducimus totam iste odit accusantium. Iste, facilis quaerat aliquid officia velit dolorem placeat perferendis sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta molestiae quas labore eveniet ut atque autem placeat. Enim omnis numquam earum culpa quam nesciunt adipisci accusamus cupiditate facere at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus eaque nostrum enim libero reprehenderit maiores commodi explicabo voluptas natus illo! Saepe nostrum repudiandae perspiciatis assumenda quaerat explicabo repellendus eveniet quasi.</p>
     </main>
 </body>
